Fix swagger; update tests
